--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h1>Git</h1>
         <h2>Trabalhando em Equipe com Controle e Segurança</h2>
         <h2> Alteração de teste do exercicios</h2>
+        <h2> Segunda alteração de teste</h2>
 
         <p>Um curso que explora os benefícios de utilizar o Git como ferramenta de controle de versão para projetos em qualquer linguagem, em qualquer plataforma.</p>
 
