Adicionando estilo para a nossa página

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-    Pagina de Teste
+    <link rel="stylesheet" type="text/css" href="design.css">
+    
 </head>
 <body>
+    <title>Pagina de Teste</title>
     <h1>Git</h1>
         <h2>Trabalhando em Equipe com Controle e Segurança</h2>
         <h2> Alteração de teste do exercicios</h2>
